--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,8 @@ footer {
     text-transform: capitalize;
     font-weight: bold;
 }
+
+footer a {
+    text-decoration: none;
+    color: white;
+}
